added some scss files

--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -1,3 +1,8 @@
 @import 'variables';
 @import 'global';
+
+
+@import 'partials/site-navigation';
+@import 'partials/site-footer';
+
 @import 'pages/wasteguide_search';
