--- a/assets/css/scss/_global.scss
+++ b/assets/css/scss/_global.scss
@@ -1,6 +1,25 @@
+body{
+  font-family: $font-family-base;
+}
+
+.site-header {
+  font-family: $font-family-base;
+}
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+  margin-bottom: $headings-margin-bottom;
+  font-family: $headings-font-family;
+  font-weight: $headings-font-weight;
+  line-height: $headings-line-height;
+  color: $headings-color;
+}
+
 .mobile-header{
   display: none;
 }
 
 
-
+.archive-post .media-left{
+  padding: 0;
+}
