--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -3,7 +3,7 @@
 @import 'variables';
 @import 'global';
 
-
+@import 'partials/tooltip';
 @import 'partials/site-navigation';
 @import 'partials/site-footer';
 
