CSS - forms and button

--- a/assets/css/scss/_variables.scss
+++ b/assets/css/scss/_variables.scss
@@ -1,3 +1,19 @@
+$msva-base-color: #1370b8;
+//$msva-base-button-inactive: #ffffff;
+//$msva-base-button-passive: $msva-base-button-inactive;
+$msva-base-button-hover-bg: #e3e8f5;
+
+$msva-base-button-active-color: #ffffff;
+$msva-base-button-active-bg: #1370b8;
+$msva-base-button-active-border: #1370b8;
+
+//$msva-base-button-click: #1370b8;
+
+
+$btn-secondary-color:            #0e85c5 !default;
+$btn-secondary-bg:               #fff !default;
+$btn-secondary-border:           #c8d2ec;
+
 
 $font-family-large:          'Lato', sans-serif;
 $font-family-sans-serif:     'Lato', sans-serif;
