override for opening hours

--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -3,6 +3,9 @@
 @import 'variables';
 @import 'global';
 
+
+@import 'overrides/wasteguide';
+
 @import 'partials/buttons';
 @import 'partials/collapse';
 @import 'partials/forms';
