Not using ACF anymore. Custom meta fields and metaboxes instead. Also using shortcode instead of template.

--- a/lib/sk-operation-messages/assets/css/sk-operation-messages.css
+++ b/lib/sk-operation-messages/assets/css/sk-operation-messages.css
@@ -1,3 +1,7 @@
-.operation-message-form .operation-message-section-header .acf-label label {
-    font-size: 24px;
+#operation-message-form .form-group {
+    margin-bottom: 20px;
+}
+
+.datepicker.dropdown-menu {
+    width: 200px;
 }
