--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -5,7 +5,9 @@
 
 
 @import 'overrides/wasteguide';
+@import 'overrides/openinghours';
 
+@import 'partials/blocks';
 @import 'partials/buttons';
 @import 'partials/collapse';
 @import 'partials/forms';
