--- a/assets/css/scss/overrides/_wasteguide.scss
+++ b/assets/css/scss/overrides/_wasteguide.scss
@@ -1,54 +1,8 @@
-.opening-hours-wrapper {
-  background: #52a65a !important;
-}
-
-.opening-hours-wrapper .list-group {
-  background: #52a65a !important;;
-}
-
-.opening-hours-wrapper .list-group-item {
-  background: #52a65a !important;;
-  color: #ffffff !important;
-}
-
-.opening-hours-wrapper .opening-hours-header {
-  background-color: #4e9e56 !important;;
-}
-
-
-.opening-hours-wrapper .opening-hours-footer {
-  background: #52a65a !important;;
-  color: #fff !important;
-}
-
-
-.opening-hours-wrapper .list-group-item p {
-  color: #ffffff !important;
-}
-
-.opening-hours-widget .list-group-item a,
-.opening-hours-widget .list-group-item a:visited {
-  color: #ffffff !important;
-}
-
-.opening-hours-wrapper .header {
-  color: #ffffff !important;
-}
-
-.opening-hours-wrapper .opening-hours-header .arrow {
-  color: #ffffff !important;
-}
-
-
-.opening-hours-wrapper .header p {
-  color: #ffffff !important;
-}
-
-.opening-hours-wrapper .opening-hours-footer a,
-.opening-hours-wrapper .opening-hours-footer a:visited {
-  color: #ffffff !important;
-}
-
-.opening-hours-nav ul li{
-  color: #ffffff !important;
+.widget-wasteguide{
+  label{
+    color: #809dad;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 70%;
+  }
 }
