--- a/assets/css/scss/_variables.scss
+++ b/assets/css/scss/_variables.scss
@@ -1,6 +1,13 @@
-$msva_blue: #2b7fbf;
+$msva_blue: #286aa6;
 $msva_green: #5bab62;
 $msva_purple: #327fb5;
+
+$sk-linklist-bg: #ffffff;
+$sk-linklist-fg: #97b1dd;
+$sk-linklist-fg-active: $msva_blue;
+
+
+
 
 $msva_border_color: #c8d2ec;
 
@@ -14,7 +21,6 @@ $msva-base-button-active-bg: #1370b8;
 $msva-base-button-active-border: #1370b8;
 
 //$msva-base-button-click: #1370b8;
-
 
 $btn-secondary-color:            #0e85c5 !default;
 $btn-secondary-bg:               #fff !default;
