Add message title to form and backend

--- a/lib/sk-operation-messages/assets/css/sk-operation-messages.css
+++ b/lib/sk-operation-messages/assets/css/sk-operation-messages.css
@@ -2,6 +2,10 @@
     margin-bottom: 20px;
 }
 
+#operation-message-form #operation-message-title {
+    margin-bottom: 10px;
+}
+
 .datepicker.dropdown-menu {
     width: 200px;
 }
