Search form as designed and some gui.

--- a/assets/css/scss/_variables.scss
+++ b/assets/css/scss/_variables.scss
@@ -22,8 +22,8 @@ $msva-base-button-active-border: #1370b8;
 
 //$msva-base-button-click: #1370b8;
 
-$btn-secondary-color:            #0e85c5 !default;
-$btn-secondary-bg:               #fff !default;
+$btn-secondary-color:            #0e85c5;
+$btn-secondary-bg:               #fff;
 $btn-secondary-border:           $msva_border_color;
 
 
