--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -1,11 +1,13 @@
+
+
 @import '../../../../sk-tivoli/assets/css/scss/profile-colors';
 @import '../../../../sk-tivoli/assets/css/scss/variables';
 @import '../../../../sk-tivoli/assets/css/scss/mixins';
 @import '../../../../sk-tivoli/assets/css/scss/bootstrap-sk/bootstrap-sk';
 
-@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,900');
 
 @import 'variables';
+@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,900');
 @import 'global';
 
 
@@ -17,8 +19,10 @@
 @import 'partials/collapse';
 @import 'partials/forms';
 @import 'partials/linklist';
+@import 'partials/operation-messages';
 @import 'partials/tooltip';
 @import 'partials/site-navigation';
 @import 'partials/site-footer';
+@import 'partials/searchform';
 
 @import 'pages/wasteguide_search';
