--- a/assets/css/scss/partials/_blocks.scss
+++ b/assets/css/scss/partials/_blocks.scss
@@ -1,17 +1,24 @@
-.row.blocks {
-  display: flex;
-  flex-wrap: wrap;
-  //margin-bottom: 2em;
 
-}
-
-.row.blocks:first-child{
-  margin-top: 4em;
-}
 .row.blocks > [class*='col-'] {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 6em;
+  margin-bottom: 3em;
+}
+
+@include media-breakpoint-up(md) {
+  .row.blocks {
+    display: flex;
+    flex-wrap: wrap;
+    //margin-bottom: 2em;
+
+  }
+
+  .row.blocks:first-child {
+    margin-top: 4em;
+  }
+  .row.blocks > [class*='col-'] {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 6em;
+  }
 }
 
 /*
@@ -70,6 +77,8 @@
   }
 
   .block {
+    min-height: 100%;
+
     .block-footer {
       padding: 2em;
       font-size: 90%;
@@ -86,22 +95,22 @@
     }
 
     &.blue {
+      background: $msva_blue;
       .block-footer {
-        background: $msva_blue;
         color: #ffffff;
       }
     }
 
     &.green {
+      background: $msva_green;
       .block-footer {
-        background: $msva_green;
         color: #ffffff;
       }
     }
 
     &.white {
+      background: #ffffff;
       .block-footer {
-        background: #ffffff;
         color: $msva_blue;
         border: 1px solid $msva_border_color;
 
@@ -136,7 +145,9 @@
   h3{
     font-size: 140%;
     color: #023b5b;
-    margin-top: -1.5em;
+    @include media-breakpoint-up(md) {
+      margin-top: -1.5em;
+    }
   }
 
   &__title {
