om messages and css fixes

--- a/assets/css/scss/_variables.scss
+++ b/assets/css/scss/_variables.scss
@@ -2,6 +2,8 @@ $msva_blue: #286aa6;
 $msva_green: #5bab62;
 $msva_purple: #327fb5;
 
+$msva-font-base-color: #023b5b;
+
 $sk-linklist-bg: #ffffff;
 $sk-linklist-fg: #97b1dd;
 $sk-linklist-fg-active: $msva_blue;
@@ -25,7 +27,6 @@ $msva-base-button-active-border: #1370b8;
 $btn-secondary-color:            #0e85c5;
 $btn-secondary-bg:               #fff;
 $btn-secondary-border:           $msva_border_color;
-
 
 $font-family-large:          'Lato', sans-serif;
 $font-family-sans-serif:     'Lato', sans-serif;
