om messages fix

--- a/assets/css/scss/partials/_operation-messages.scss
+++ b/assets/css/scss/partials/_operation-messages.scss
@@ -1,11 +1,13 @@
 .operation-messages{
 
   &__button{
-    margin-bottom: 2em;
-    float:right;
 
+    float:right;
+    margin-top: -0.45em;
     @include media-breakpoint-down(md) {
       float:left;
+      margin-bottom: 2em;
+
     }
 
   }
