--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -14,6 +14,7 @@
 @import 'overrides/wasteguide';
 @import 'overrides/openinghours';
 
+@import 'partials/overlay';
 @import 'partials/blocks';
 @import 'partials/buttons';
 @import 'partials/collapse';
