--- a/lib/sk-operation-messages/assets/css/sk-operation-messages.css
+++ b/lib/sk-operation-messages/assets/css/sk-operation-messages.css
@@ -9,6 +9,12 @@
     margin-bottom: 10px;
 }
 
+.operation-message-information-1,
+.operation-message-information-2,
+.operation-message-ending {
+    border: 1px solid #c8d2ec
+}
+
 .datepicker.dropdown-menu {
     width: 200px;
 }
