--- a/assets/css/scss/partials/_operation-messages.scss
+++ b/assets/css/scss/partials/_operation-messages.scss
@@ -32,12 +32,13 @@
 
     padding: 0.3em 0 0.3em 0.35em;
 
-    &.active {
+    &.active a{
       color: #cc2e2b
+
 
     }
 
-    &.done {
+    &.done{
       color: #48804e;
     }
     @include media-breakpoint-up(md) {
