--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -11,7 +11,6 @@
 @import 'global';
 
 
-@import 'overrides/wasteguide';
 @import 'overrides/openinghours';
 
 @import 'partials/overlay';
@@ -25,5 +24,6 @@
 @import 'partials/site-navigation';
 @import 'partials/site-footer';
 @import 'partials/searchform';
+@import 'partials/widgets';
 
 @import 'pages/wasteguide_search';
