css for operation message

--- a/assets/css/scss/partials/_operation-messages.scss
+++ b/assets/css/scss/partials/_operation-messages.scss
@@ -49,3 +49,14 @@
 
   }
 }
+
+
+.single-operation_message{
+  .om-info-wrapper{
+    margin-top: 2em;
+  }
+
+  .info-text{
+    //font-weight: 600;
+  }
+}
