--- a/assets/css/scss/partials/_widgets.scss
+++ b/assets/css/scss/partials/_widgets.scss
@@ -35,12 +35,29 @@
 
   }
 
+
+&.active{
+  &.widget-garbage-scheme{
+    h3{
+      opacity: 0.5;
+    }
+
+    .widget-garbage-scheme__text{
+      opacity: 0.5;
+    }
+
+  }
+}
+
+
   .widget-garbage-scheme{
 
+    color: red !important;
 
     &__text{
       margin: 1em 0;
     }
+
 
     &__response{
       position:absolute;
@@ -69,6 +86,7 @@
       }
       //font-size: 90%;
     }
+
 
     &__response-close{
       a{
