--- a/assets/css/scss/_global.scss
+++ b/assets/css/scss/_global.scss
@@ -54,7 +54,7 @@ h1, h2, h3, h4, h5, h6,
 }
 
 .news{
-
+  margin-top: -2em;
   h3{
     color: $msva_blue !important;
   }
@@ -86,4 +86,3 @@ h1, h2, h3, h4, h5, h6,
 
 
 }
-
