--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -24,6 +24,7 @@
 @import 'partials/site-navigation';
 @import 'partials/site-footer';
 @import 'partials/searchform';
+@import 'partials/sticky-post';
 @import 'partials/widgets';
 
 @import 'pages/wasteguide_search';
