gui for top links

--- a/assets/css/scss/partials/_buttons.scss
+++ b/assets/css/scss/partials/_buttons.scss
@@ -1,21 +1,25 @@
+.btn-primary,
 .btn-secondary {
   background-color: $btn-secondary-bg;
   border-color: $btn-secondary-border;
   color: $btn-secondary-color;
 }
 
+.btn-primary:hover,
 .btn-secondary:hover {
   background-color: $msva-base-button-hover-bg;
   border-color: $btn-secondary-border;
   color: $btn-secondary-color;
 }
 
+.btn-primary.focus, .btn-primary:focus,
 .btn-secondary.focus, .btn-secondary:focus {
   background-color: $msva-base-button-active-bg;
   border-color: $msva-base-button-active-border;
   color: $msva-base-button-active-color;
 }
 
+.btn-primary.active, .btn-primary:active, .open > .btn-primary.dropdown-toggle,
 .btn-secondary.active, .btn-secondary:active, .open > .btn-secondary.dropdown-toggle {
   background-color: $msva-base-button-active-bg;
   background-image: none;
@@ -23,15 +27,20 @@
   color: $msva-base-button-active-color;
 }
 
+.btn-primary.active.focus, .btn-primary.active:focus, .btn-primary.active:hover, .btn-primary.focus:active, .btn-primary:active:focus, .btn-primary:active:hover, .open > .btn-primary.dropdown-toggle.focus, .open > .btn-primary.dropdown-toggle:focus, .open > .btn-primary.dropdown-toggle:hover,
 .btn-secondary.active.focus, .btn-secondary.active:focus, .btn-secondary.active:hover, .btn-secondary.focus:active, .btn-secondary:active:focus, .btn-secondary:active:hover, .open > .btn-secondary.dropdown-toggle.focus, .open > .btn-secondary.dropdown-toggle:focus, .open > .btn-secondary.dropdown-toggle:hover {
   background-color: $msva-base-button-active-bg;
   border-color: $msva-base-button-active-border;
   color: $msva-base-button-active-color;
 }
+
+.btn-primary.disabled.focus, .btn-primary.disabled:focus, .btn-primary.focus:disabled, .btn-primary:disabled:focus,
 .btn-secondary.disabled.focus, .btn-secondary.disabled:focus, .btn-secondary.focus:disabled, .btn-secondary:disabled:focus {
   background-color: #fff;
   border-color: #ccc;
 }
+
+.btn-primary.disabled:hover, .btn-primary:disabled:hover,
 .btn-secondary.disabled:hover, .btn-secondary:disabled:hover {
   background-color: #fff;
   border-color: #ccc;
@@ -40,3 +49,9 @@
 .btn.btn-rounded{
   font-family: $font-family-base;
 }
+
+.btn-primary {
+  border-radius: 2em;
+  border-width: 2px;
+}
+
