--- a/assets/css/scss/partials/_blocks.scss
+++ b/assets/css/scss/partials/_blocks.scss
@@ -65,6 +65,11 @@
         font-size: 140%;
         color: #62b26d;
       }
+
+      @include media-breakpoint-down(md) {
+        padding: 2em 0;
+
+      }
     }
   }
 
@@ -73,6 +78,11 @@
 
     .sk-grid-border-inner{
       padding: 6em 0 6em 8em;
+
+      @include media-breakpoint-down(md) {
+        padding: 2em 0;
+      }
+
     }
   }
 
