--- a/assets/css/scss/partials/_operation-messages.scss
+++ b/assets/css/scss/partials/_operation-messages.scss
@@ -7,6 +7,11 @@
     @include media-breakpoint-down(md) {
       float:left;
       margin-bottom: 2em;
+      width: 100%;
+
+      .btn{
+        width: 100%;
+      }
 
     }
 
