latest news mobile

--- a/assets/css/scss/_global.scss
+++ b/assets/css/scss/_global.scss
@@ -1,25 +1,25 @@
-body{
+body {
   font-family: $font-family-base;
   color: $msva-font-base-color;
 }
 
-.contentwrapper-inner{
+.contentwrapper-inner {
 
-    a{
+  a {
+    color: $msva_blue;
+
+    &:hover {
       color: $msva_blue;
+    }
+  }
 
-      &:hover{
-        color: $msva_blue;
-      }
-    }
-  
-    .sk-sidebar a{
-      color: inherit;
-    }
+  .sk-sidebar a {
+    color: inherit;
+  }
 
-    .sk-collapse h2 a{
-      color:inherit;
-    }
+  .sk-collapse h2 a {
+    color: inherit;
+  }
 
 }
 
@@ -36,9 +36,8 @@ h1, h2, h3, h4, h5, h6,
   color: $headings-color;
 }
 
-.mobile-header{
-  border:none;
-
+.mobile-header {
+  border: none;
 
   @include media-breakpoint-down(sm) {
     border-top: 5px solid $msva-base-color !important;
@@ -50,30 +49,27 @@ h1, h2, h3, h4, h5, h6,
       }
     }
 
-
   }
 }
 
-
-.archive-post .media-left{
+.archive-post .media-left {
   padding: 0;
 }
 
-
-.page-template-template-startpage{
-  .page-widgets{
+.page-template-template-startpage {
+  .page-widgets {
     display: none;
   }
 
 }
 
-.news{
+.news {
   margin-top: -2em;
-  h3{
+  h3 {
     color: $msva_blue !important;
   }
 
-  .widget-latest-news{
+  .widget-latest-news {
     margin-top: 2em;
   }
 }
@@ -82,53 +78,51 @@ h1, h2, h3, h4, h5, h6,
   padding-top: 1.25rem;
   margin-bottom: 1.25rem;
 
-
-    .region-select{
-      @include media-breakpoint-down(sm) {
-        width: 100%;
-        padding-left: 1em;
-        padding-right: 1em;
-        .btn{
-         display: block;
-        }
-
-      }
-
-      span{
-        text-transform: uppercase;
-        font-weight: 400;
-        letter-spacing: 1px;
-        padding-right: 10px;
-      }
-
-      .icon{
-        margin-left: 1em;
-        padding-bottom: 10px;
+  .region-select {
+    @include media-breakpoint-down(sm) {
+      width: 100%;
+      padding-left: 1em;
+      padding-right: 1em;
+      .btn {
+        display: block;
       }
 
     }
 
+    span {
+      text-transform: uppercase;
+      font-weight: 400;
+      letter-spacing: 1px;
+      padding-right: 10px;
+    }
+
+    .icon {
+      margin-left: 1em;
+      padding-bottom: 10px;
+    }
+
+  }
 
 }
 
-.site-footer{
-  .site-footer__column:first-child{
+.site-footer {
+  .site-footer__column:first-child {
     width: 25%;
   }
-  .site-footer__column:last-child{
+  .site-footer__column:last-child {
     width: 70%;
-    float:right;
+    float: right;
     padding-top: 3.5em;
     text-align: right;
   }
 
   @include media-breakpoint-down(md) {
-    .site-footer__column:first-child{
+    .site-footer__column:first-child {
       width: 100%;
     }
 
-    .site-footer__column:last-child{
-      float:left;
+    .site-footer__column:last-child {
+      float: left;
       padding-top: 1em;
       width: 100%;
       text-align: left;
@@ -136,8 +130,7 @@ h1, h2, h3, h4, h5, h6,
   }
 }
 
-
-.container-fluid{
+.container-fluid {
   @include media-breakpoint-down(sm) {
     //padding: 0;
 
@@ -148,4 +141,106 @@ h1, h2, h3, h4, h5, h6,
 
   }
 
+}
+
+.search-module__item__icon {
+  background: $msva_blue none repeat scroll 0 0 !important;
+}
+
+
+.search-module__item,
+.search-module__item--post,
+.search-module__item--page{
+
+  svg{
+    fill: $sk-linklist-fg !important;
+  }
+
+  a:hover svg  {
+    fill: $msva_blue !important;
+  }
+}
+
+.search-module__item {
+  .search-module__item__read-icon {
+    opacity: 1;
+  }
+}
+
+.navigation-card-ingress {
+  padding-left: 10em;
+  margin-top: -4.5em;
+  margin-bottom: 2.75em;
+  @include media-breakpoint-down(sm) {
+    padding-left: inherit;
+    padding-top: 1em;
+    margin-top: 0em;
+    margin-bottom: 0;
+  }
+}
+
+
+.btn-mobile-fixed .iconwrapper {
+  fill: $msva_blue;
+}
+
+/** Latest news **/
+.news .front-page__heading{
+  @include media-breakpoint-down(sm) {
+  display: block !important;
+    //font-size: 90% !important;
+  }
+}
+
+.widget-latest-news-msva {
+  margin-top: 1em;
+  .archive-post__date {
+
+    font-family: inherit;
+    font-size: 0.75em;
+    font-weight: 500;
+  }
+
+  @include media-breakpoint-down(sm) {
+
+    .media{
+      border-bottom: 1px solid $msva_border_color;
+      padding-bottom: 1em;
+      margin-bottom: 0.5em;
+    }
+
+    .media-heading{
+      margin-top: 0.25em;
+      font-weight: 400;
+    }
+
+    .media-body {
+      width: 100%;
+      display: inherit;
+      overflow: none;
+      float: right;
+
+      .archive-post__excerpt {
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        font-size: 90%;
+        margin-top: 0;
+      }
+
+    }
+
+    .widget-latest-news__post .media-body {
+
+    }
+    .widget-latest-news__post .media-left {
+      float: left;
+      width: 100px;
+      margin-right: 1em;
+      margin-bottom: 0;
+      img {
+        //width: 25%;
+      }
+    }
+  }
 }
