--- a/assets/css/scss/partials/_blocks.scss
+++ b/assets/css/scss/partials/_blocks.scss
@@ -39,6 +39,11 @@
   [class*='col-']{
     border-right: 1px solid $msva_border_color;
     margin-bottom: 0;
+
+    @include media-breakpoint-down(sm) {
+      border: 0;
+    }
+
     //border-left: 0;
   }
 
@@ -59,6 +64,8 @@
     //border: 1px solid $msva_border_color;
     //border-left: 0;
 
+
+
     .block-image{
       margin-left: -1em;
       margin-right: -1em;
@@ -75,6 +82,7 @@
       @include media-breakpoint-down(md) {
         padding: 2em 0;
 
+
       }
     }
   }
@@ -87,6 +95,7 @@
 
       @include media-breakpoint-down(md) {
         padding: 2em 0;
+
       }
 
     }
