--- a/assets/css/scss/_global.scss
+++ b/assets/css/scss/_global.scss
@@ -132,7 +132,12 @@ h1, h2, h3, h4, h5, h6,
 
 .container-fluid {
   @include media-breakpoint-down(sm) {
-    //padding: 0;
+    &.sections{
+      //padding-right: 0;
+      //margin-left: -0.9375em;
+      //margin-right: -0.9375em;
+
+    }
 
     .row.blocks > [class*='col-'] {
       //padding-left: 1em;
@@ -192,56 +197,4 @@ h1, h2, h3, h4, h5, h6,
   }
 }
 
-.widget-latest-news-msva {
-  margin-top: 1em;
-  .archive-post__date {
-
-    font-family: inherit;
-    font-size: 0.75em;
-    font-weight: 500;
-  }
-
-  @include media-breakpoint-down(sm) {
-
-    .media{
-      border-bottom: 1px solid $msva_border_color;
-      padding-bottom: 1em;
-      margin-bottom: 0.5em;
-    }
-
-    .media-heading{
-      margin-top: 0.25em;
-      font-weight: 400;
-    }
-
-    .media-body {
-      width: 100%;
-      display: inherit;
-      overflow: none;
-      float: right;
-
-      .archive-post__excerpt {
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        font-size: 90%;
-        margin-top: 0;
-      }
-
-    }
-
-    .widget-latest-news__post .media-body {
-
-    }
-    .widget-latest-news__post .media-left {
-      float: left;
-      width: 100px;
-      margin-right: 1em;
-      margin-bottom: 0;
-      img {
-        //width: 25%;
-      }
-    }
-  }
-}
 
