critical information module

--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -26,5 +26,6 @@
 @import 'partials/searchform';
 @import 'partials/sticky-post';
 @import 'partials/widgets';
+@import 'partials/critical-information';
 
 @import 'pages/wasteguide_search';
