gui and css fixes for operation messages

--- a/lib/sk-operation-messages/assets/css/sk-operation-messages.css
+++ b/lib/sk-operation-messages/assets/css/sk-operation-messages.css
@@ -1,3 +1,9 @@
+.operation-message-wrapper .form-section{
+    background: #f7f7f7;
+    padding: 1em;
+    margin-bottom: 1.5em;
+}
+
 .operation-messages-list {
     margin-top: 20px;
 }
