--- a/assets/css/scss/partials/_site-footer.scss
+++ b/assets/css/scss/partials/_site-footer.scss
@@ -13,6 +13,41 @@ $footer_background: #286AA6;
 	a:hover{
 		text-decoration: underline;
 	}
+
+	&__module{
+
+		&--content{
+
+			ul{
+				@include media-breakpoint-up(md) {
+					float: right;
+				}
+				padding: 0;
+				list-style-type: none;
+			}
+
+			li{
+				list-style-type: none;
+				padding: 0.25em 0;
+
+
+
+				&:last-child{
+					border:none;
+					padding-right: 0;
+				}
+
+				@include media-breakpoint-up(md) {
+					padding-left: 1.5em;
+					padding-right: 1.5em;
+					float: left;
+					border-right: 2px solid;
+				}
+
+			}
+		}
+
+	}
 }
 
 
