added short code to add a large link button

--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -14,6 +14,7 @@
 @import 'overrides/openinghours';
 
 @import 'partials/overlay';
+@import 'partials/buttonlink';
 @import 'partials/blocks';
 @import 'partials/buttons';
 @import 'partials/collapse';
