--- a/assets/css/scss/style.scss
+++ b/assets/css/scss/style.scss
@@ -30,3 +30,7 @@
 @import 'partials/critical-information';
 
 @import 'pages/wasteguide_search';
+
+
+@import '../../../lib/sk-info-banner/assets/scss/info-banner';
+@import '../../../lib/sk-highlight/assets/scss/sk-highlight';
