--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5676,6 +5676,7 @@ h1, h2, h3, h4, h5, h6,
   position: absolute;
   top: -1em;
   right: 4em;
+  letter-spacing: 1px;
   border-radius: 0.25em; }
   .highlight-badge:empty {
     display: none; }
